@@ -1,3 +1,8 @@
+2000-02-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (annotate): Re-wrote to improve performance.
+	(draw): Re-wrote to improve performance.
+
 2000-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Drawable.cpp (text): Bugfix: support spaces in annotation text.
